--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "enmap-sqlite": "^2.0.5",
     "jshint": "^2.9.6",
     "moment": "^2.22.2",
-    "moment-duration-format": "^2.2.2"
+    "moment-duration-format": "^2.2.2",
+    "superagent": "^3.8.3"
   }
 }
