--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "enmap": "^4.0.12",
     "enmap-sqlite": "^2.0.5",
     "jshint": "^2.9.6",
+    "mathjs": "^5.1.2",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "superagent": "^3.8.3"
