--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ShadowShard",
+  "name": "Moonglow",
   "version": "2.3.6",
-  "description": "ShadowShard is a developed bot by the FCC.",
+  "description": "Moonglowd is a developed bot by the FCC.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
