Fix Commands & Package Lock

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Moonglow",
+  "name": "moonglow",
   "version": "2.3.6",
   "description": "Moonglowd is a developed bot by the FCC.",
   "main": "index.js",
