--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "NightRaven#2172"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "discord.js": "^11.4.2",
     "enmap": "^4.0.12",
