--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonglow",
-  "version": "3.5.5",
+  "version": "3.6.0",
   "description": "Moonglow is a developed bot by the FCC.",
   "main": "index.js",
   "repository": {
@@ -28,6 +28,7 @@
     "enmap": "^4.0.12",
     "enmap-sqlite": "^2.0.5",
     "eris": "^0.9.0",
+    "eslint": "^5.6.1",
     "jshint": "^2.9.6",
     "lavalink": "^2.2.0",
     "mathjs": "^5.1.2",
