--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
+    "os-name": "^2.0.1",
     "raven": "^2.6.4",
     "superagent": "^3.8.3",
     "uws": "^99.0.0",
