--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "superagent": "^3.8.3",
     "uws": "^99.0.0",
     "vows": "^0.8.2",
+    "windows-release": "^3.1.0",
     "ytdl-core": "^0.25.2"
   }
 }
