--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "NightRaven#2172"
   ],
   "dependencies": {
+    "@sentry/node": "^4.1.1",
     "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "dateformat": "^3.0.3",
