--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 *       @mattsilver1 @fccouncil-council
 
-*.js    @mattsilver1 @TheSkele27
+*.js    @mattsilver1
 
 
 # The `docs/*` pattern will match files like
