--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonglow",
-  "version": "4.1.1",
+  "version": "4.5.0",
   "description": "Moonglow is a developed bot by the FCC.",
   "main": "index.js",
   "repository": {
@@ -30,12 +30,14 @@
     "enmap-sqlite": "^2.0.5",
     "eris": "^0.9.0",
     "eslint": "^5.6.1",
+    "ffmpeg-binaries": "^4.0.0",
     "jshint": "^2.9.6",
     "lavalink": "^2.2.0",
     "mathjs": "^5.1.2",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
+    "node-opus": "^0.3.0",
     "os-name": "^2.0.1",
     "raven": "^2.6.4",
     "superagent": "^3.8.3",
