--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "moonglow",
-  "version": "4.5.0",
+  "version": "0.5.0",
   "description": "Moonglow is a developed bot by the FCC.",
   "main": "index.js",
   "repository": {
-    "url": "https://github.com/FCCouncil/Moonglow"
+    "url": "https://github.com/FCCouncil/Moonglow-Eris/"
   },
   "scripts": {
     "test": "node index.js && exit 1",
@@ -30,18 +30,26 @@
     "enmap-sqlite": "^2.0.5",
     "eris": "^0.9.0",
     "eslint": "^5.6.1",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "ffmpeg-binaries": "^4.0.0",
+    "helmet": "^3.14.0",
     "jshint": "^2.9.6",
     "lavalink": "^2.2.0",
+    "marked": "^0.5.1",
     "mathjs": "^5.1.2",
+    "memorystore": "^1.6.0",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "node-opus": "^0.3.0",
     "os-name": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-discord": "^0.1.3",
     "raven": "^2.6.4",
     "superagent": "^3.8.3",
     "systeminformation": "^3.45.7",
+    "url": "^0.11.0",
     "uws": "^99.0.0",
     "vows": "^0.8.2",
     "windows-release": "^3.1.0",
