--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "node index.js && exit 1",
     "start": "node index.js",
-    "shard": "node shard.js"
+    "pm2start": "pm2 start index.js"
   },
   "engines": {
     "node": ">=8",
@@ -22,40 +22,16 @@
   "dependencies": {
     "@sentry/node": "^4.1.1",
     "axios": "^0.18.0",
-    "baseconvert": "^1.0.0",
     "chalk": "^2.4.1",
-    "dateformat": "^3.0.3",
-    "discord.js": "^11.4.2",
-    "discord.js-musicbot-addon": "^12.0.6",
-    "enmap": "^4.0.12",
-    "enmap-sqlite": "^2.0.5",
     "eris": "^0.9.0",
-    "eslint": "^5.6.1",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "ffmpeg-binaries": "^4.0.0",
-    "helmet": "^3.14.0",
-    "hex2dec": "^1.1.0",
-    "jshint": "^2.9.6",
-    "lavalink": "^2.2.0",
-    "marked": "^0.5.1",
-    "mathjs": "^5.1.2",
-    "memorystore": "^1.6.0",
-    "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
-    "node-base64-image": "^1.0.5",
-    "node-opus": "^0.3.0",
     "os-name": "^2.0.1",
-    "passport": "^0.4.0",
-    "passport-discord": "^0.1.3",
+    "pm2": "^3.2.2",
     "raven": "^2.6.4",
-    "superagent": "^3.8.3",
-    "systeminformation": "^3.45.7",
-    "url": "^0.11.0",
-    "uws": "^99.0.0",
-    "vows": "^0.8.2",
-    "windows-release": "^3.1.0",
-    "ytdl-core": "^0.25.2"
+    "systeminformation": "^3.45.7"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.1"
   }
 }
