--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "enmap-sqlite": "^2.0.5",
     "eris": "^0.9.0",
     "eslint": "^5.6.1",
+    "express": "^4.16.4",
     "ffmpeg-binaries": "^4.0.0",
     "jshint": "^2.9.6",
     "lavalink": "^2.2.0",
