--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-opus": "^0.3.0",
     "os-name": "^2.0.1",
     "raven": "^2.6.4",
+    "serve-favicon": "^2.5.0",
     "superagent": "^3.8.3",
     "systeminformation": "^3.45.7",
     "uws": "^99.0.0",
