--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sentry/node": "^4.1.1",
     "axios": "^0.18.0",
     "chalk": "^2.4.1",
+    "cleverbot.io": "^1.0.4",
     "dateformat": "^3.0.3",
     "discord.js": "^11.4.2",
     "discord.js-musicbot-addon": "^12.0.6",
@@ -34,11 +35,13 @@
     "ffmpeg-binaries": "^4.0.0",
     "jshint": "^2.9.6",
     "lavalink": "^2.2.0",
+    "loc-api-library": "^0.8.5",
     "mathjs": "^5.1.2",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "node-opus": "^0.3.0",
+    "npm": "^6.4.1",
     "os-name": "^2.0.1",
     "raven": "^2.6.4",
     "serve-favicon": "^2.5.0",
